# esp_termo

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.signed
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
macro_lib/: Cargo.toml
macro_lib/src/: lib.rs
scripts/: flash.sh
serve/: package-lock.json
src/: hc_sr04.rs  main.rs  mqtt.rs  sensor.rs  wifi.rs
src/relay/: discord.rs  mod.rs  mqtt.rs  ota.rs
src/sensor/: bme280.rs  hc_sr04.rs  mod.rs  soil.rs
src/trigger/: mod.rs  timer.rs
src/utils/: helper.rs  mod.rs  power.rs  wifi.rs
