[package]
name = "esp-termo"
version = "0.1.0"
authors = ["Gergo <gergely@storekey.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1.0.71"
bme280-rs = "0.1.0"
dotenvy_macro = "0.15.7"

embedded-hal = "=1.0.0-alpha.10"
embedded-svc = "0.25.3"
esp-idf-hal = "0.41.1"
esp-idf-svc = "0.46.2"
esp-idf-sys = { version = "0.33.0", features = ["binstart"] }
json = "0.12.4"
lis3dh = "=0.4.2"
log = "0.4.20"
shared-bus = "0.2.5"
shtcx = "=0.11.0"

[build-dependencies]
anyhow = "1.0.71"
embuild = "0.31.2"
